# compressed-indexes-string

./: .gitignore  .python-version  README.md  requirements.txt
bpt/: create_box.sh  downloads.txt
bpt/bpt-rules/: boost-1.56.0  cmake-3.0.2  gcc-4.9.1  openssl-1.0.1i  python-2.7.8
cpp/: CMakeLists.txt  create_dictionary.cpp  create_index.cpp  friends_at_k.cpp  index_stats.cpp  iterate_edges.cpp  reassign_ids.cpp  sample_queries.cpp  simple_scheme.cpp  verify_index.cpp
cpp/ps/: coding.hpp  configuration.hpp  containers.hpp  files.hpp  mapping.hpp  optargs.hpp  prefix.hpp  queues.hpp  utils.hpp
cpp/ps/dicts/: dict_types.hpp  permuterm.hpp  strarray.hpp
cpp/ps/graphs/: edges.hpp  edges_iterator.hpp  graph_types.hpp  gz_graph.hpp  serializer.hpp  stdin_graph.hpp
cpp/ps/indices/: index_types.hpp  neighbors.hpp  node.hpp  simple_index.hpp  topk_index.hpp
cpp/ps/indices/builders/: rmq_sequences.hpp
cpp/ps/problems/: intersection.hpp  schemes.hpp  topk.hpp
cpp/ps/sequences/: block_sequences.hpp  elias_sequences.hpp  options.hpp  plain_sequences.hpp  sequence_file.hpp  sequence_packer.hpp  sequence_types.hpp
cpp/test/: CMakeLists.txt  perftest_common.hpp  test_dicts.cpp  test_files.cpp  test_index.cpp  test_iterate_edges.cpp  test_iterate_graph.cpp  test_prefix.cpp  test_queues.cpp  test_rmq.cpp  test_sequence_file.cpp  test_sequences.cpp
cpp/test/scripts/: baseline_test.py  comparison.py  fulltest.sh  stats.py  topk_test.py  utils.py
patches/: cpi00-private-upgrade.patch  gcc-bug-rename-var-end.patch  pef-multithread-optpfor-bug.patch  succinct-constructors.patch  succinct-ostream.patch
scripts/: fill_missing.py  filter.py  plot.py  plot_stats.sh  renderer.py  sample_users.py  utils.py  utils.sh
scripts/cleanup/: dblp.sh  livejournal.sh  twitter.sh
scripts/report/: encodings.sh  fof.sh  topk.sh
